[gd_scene load_steps=17 format=3 uid="uid://2hicqk5kkl4q"]

[ext_resource type="Texture2D" uid="uid://bye6w5go2gcqf" path="res://addons/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Red/Warrior_Red.png" id="1_508ey"]
[ext_resource type="Script" path="res://player/player.gd" id="1_btmvh"]
[ext_resource type="PackedScene" uid="uid://yw7g72vc54yd" path="res://misc/ritual.tscn" id="2_7ljsi"]
[ext_resource type="PackedScene" uid="uid://mu2krdumj40m" path="res://misc/dropable/player_skull.tscn" id="2_x6c1u"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_icc37"]
radius = 12.0005
height = 42.963

[sub_resource type="Animation" id="Animation_gryvp"]
length = 0.001

[sub_resource type="Animation" id="Animation_abm3a"]
resource_name = "attack_d_left"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_3hn5b"]
resource_name = "attack_slash"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_trmtr"]
resource_name = "uppercut"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_3f6mp"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_508ey")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_h0chh"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3x28f"]
_data = {
"RESET": SubResource("Animation_gryvp"),
"attack_d_left": SubResource("Animation_abm3a"),
"attack_slash": SubResource("Animation_3hn5b"),
"attack_upper": SubResource("Animation_trmtr"),
"idle": SubResource("Animation_3f6mp"),
"run": SubResource("Animation_h0chh")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_h0nu5"]
radius = 112.004

[sub_resource type="CircleShape2D" id="CircleShape2D_5gs86"]
radius = 48.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ocdn"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oavg4"]
bg_color = Color(0.730542, 0, 0.0182511, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_btmvh")
sword_damage = 2
ritual_damage = 3
ritual_interval = 15.0
ritual_scene = ExtResource("2_7ljsi")
health = 50
health_limit = 50
death_animation = ExtResource("2_x6c1u")

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(0, -28)
texture = ExtResource("1_508ey")
hframes = 6
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
rotation = -1.57026
shape = SubResource("CapsuleShape2D_icc37")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3x28f")
}
autoplay = "idle"

[node name="SwordArea" type="Area2D" parent="."]
position = Vector2(0, -27)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordArea"]
visible = false
position = Vector2(1, 6)
shape = SubResource("CircleShape2D_h0nu5")
debug_color = Color(0.985885, 0.0900872, 0.187456, 0.42)

[node name="DamageArea" type="Area2D" parent="."]
position = Vector2(1, -21)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
visible = false
shape = SubResource("CircleShape2D_5gs86")
debug_color = Color(0, 0.596793, 0.167016, 0.42)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -24.0
offset_top = 7.0
offset_right = 24.0
offset_bottom = 12.0
theme_override_styles/background = SubResource("StyleBoxFlat_7ocdn")
theme_override_styles/fill = SubResource("StyleBoxFlat_oavg4")
value = 62.0
show_percentage = false
